semantic.output
Terminals unused in grammar

   _IF
   _ELSE
   _RETURN
   _WHILE
   _DO
   _PRIVATE
   _PROTECTED
   _PUBLIC
   _CONTIUNE
   _BREAK
   ONLY_IF


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | class_list

    3 class_list: class
    4           | class_list class

    5 @1: %empty

    6 class: _ACCESS_SPECIFIER _CLASS _CLASSNAME @1 class_statements

    7 class_statements: _LBRACKET class_variable_list constructor_list function_list _RBRACKET

    8 class_variable_list: %empty
    9                    | class_variable_list class_variable

   10 constructor_list: %empty
   11                 | constructor_list constructor

   12 constructor: _CLASSNAME _LPAREN _constr_param_list _RPAREN _LBRACKET _constructor_body _RBRACKET

   13 _constr_param_list: %empty
   14                   | _constr_with_params

   15 _constr_with_params: _constr_param
   16                    | _constr_with_params _COMMA _constr_param

   17 _constr_param: _TYPE _ID

   18 _constructor_body: %empty
   19                  | _constructor_body _constructor_row

   20 $@2: %empty

   21 _constructor_row: _THIS _DOT _ID _ASSIGN _ID $@2 _SEMICOLON

   22 function_list: %empty
   23              | function_list function

   24 $@3: %empty

   25 function: _ACCESS_SPECIFIER static _TYPE _ID $@3 _LPAREN parameter _RPAREN func_body

   26 static: %empty
   27       | _STATIC

   28 parameter: %empty
   29          | _TYPE _ID

   30 func_body: _LBRACKET variable_list statement_list _RBRACKET

   31 statement_list: %empty
   32               | statement_list statement

   33 statement: for_statement
   34          | make_object_statement
   35          | inc_statement
   36          | assignment_statement

   37 make_object_statement: _CLASSNAME _ID _ASSIGN _NEW _CLASSNAME _LPAREN ids _RPAREN _SEMICOLON

   38 ids: %empty
   39    | id_list

   40 id_list: _ID
   41        | id_list _COMMA _ID

   42 $@4: %empty

   43 inc_statement: _ID $@4 _INC _SEMICOLON

   44 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   45 $@5: %empty

   46 @6: %empty

   47 for_statement: _FOR _LPAREN _TYPE _ID $@5 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN _LBRACKET @6 statement_list _RBRACKET

   48 rel_exp: num_exp _RELOP num_exp

   49 exp: literal
   50    | _ID
   51    | function_call
   52    | _LPAREN num_exp _RPAREN

   53 literal: _INT_NUMBER
   54        | _UINT_NUMBER

   55 $@7: %empty

   56 function_call: _ID $@7 _LPAREN argument _RPAREN

   57 argument: %empty
   58         | num_exp

   59 num_exp: exp
   60        | num_exp _AROP exp

   61 variable_list: %empty
   62              | variable_list variable

   63 $@8: %empty

   64 variable: _TYPE $@8 vars _SEMICOLON

   65 $@9: %empty

   66 class_variable: _TYPE $@9 class_line_vars _SEMICOLON

   67 class_line_vars: _ID
   68                | class_line_vars _COMMA _ID

   69 vars: _ID
   70     | vars _COMMA _ID


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 17 25 29 47 64 66
_ACCESS_SPECIFIER (259) 6 25
_IF (260)
_ELSE (261)
_RETURN (262)
_ID (263) 17 21 25 29 37 40 41 43 44 47 50 56 67 68 69 70
_INT_NUMBER (264) 53
_UINT_NUMBER (265) 54
_CLASSNAME (266) 6 12 37
_LPAREN (267) 12 25 37 47 52 56
_RPAREN (268) 12 25 37 47 52 56
_LBRACKET (269) 7 12 30 47
_RBRACKET (270) 7 12 30 47
_ASSIGN (271) 21 37 44 47
_SEMICOLON (272) 21 37 43 44 47 64 66
_AROP (273) 60
_RELOP (274) 48
_COMMA (275) 16 41 68 70
_INC (276) 43 47
_WHILE (277)
_DO (278)
_PRIVATE (279)
_PROTECTED (280)
_PUBLIC (281)
_THIS (282) 21
_FOR (283) 47
_CONTIUNE (284)
_BREAK (285)
_NEW (286) 37
_CLASS (287) 6
_STATIC (288) 27
_DOT (289) 21
ONLY_IF (290)


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
program (37)
    on left: 1 2, on right: 0
class_list (38)
    on left: 3 4, on right: 2 4
class (39)
    on left: 6, on right: 3 4
@1 (40)
    on left: 5, on right: 6
class_statements (41)
    on left: 7, on right: 6
class_variable_list (42)
    on left: 8 9, on right: 7 9
constructor_list (43)
    on left: 10 11, on right: 7 11
constructor (44)
    on left: 12, on right: 11
_constr_param_list (45)
    on left: 13 14, on right: 12
_constr_with_params (46)
    on left: 15 16, on right: 14 16
_constr_param (47)
    on left: 17, on right: 15 16
_constructor_body (48)
    on left: 18 19, on right: 12 19
_constructor_row (49)
    on left: 21, on right: 19
$@2 (50)
    on left: 20, on right: 21
function_list (51)
    on left: 22 23, on right: 7 23
function (52)
    on left: 25, on right: 23
$@3 (53)
    on left: 24, on right: 25
static (54)
    on left: 26 27, on right: 25
parameter (55)
    on left: 28 29, on right: 25
func_body (56)
    on left: 30, on right: 25
statement_list (57)
    on left: 31 32, on right: 30 32 47
statement (58)
    on left: 33 34 35 36, on right: 32
make_object_statement (59)
    on left: 37, on right: 34
ids (60)
    on left: 38 39, on right: 37
id_list (61)
    on left: 40 41, on right: 39 41
inc_statement (62)
    on left: 43, on right: 35
$@4 (63)
    on left: 42, on right: 43
assignment_statement (64)
    on left: 44, on right: 36
for_statement (65)
    on left: 47, on right: 33
$@5 (66)
    on left: 45, on right: 47
@6 (67)
    on left: 46, on right: 47
rel_exp (68)
    on left: 48, on right: 47
exp (69)
    on left: 49 50 51 52, on right: 59 60
literal (70)
    on left: 53 54, on right: 47 49
function_call (71)
    on left: 56, on right: 51
$@7 (72)
    on left: 55, on right: 56
argument (73)
    on left: 57 58, on right: 56
num_exp (74)
    on left: 59 60, on right: 44 48 52 58 60
variable_list (75)
    on left: 61 62, on right: 30 62
variable (76)
    on left: 64, on right: 62
$@8 (77)
    on left: 63, on right: 64
class_variable (78)
    on left: 66, on right: 9
$@9 (79)
    on left: 65, on right: 66
class_line_vars (80)
    on left: 67 68, on right: 66 68
vars (81)
    on left: 69 70, on right: 64 70


State 0

    0 $accept: . program $end

    _ACCESS_SPECIFIER  shift, and go to state 1

    $default  reduce using rule 1 (program)

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    6 class: _ACCESS_SPECIFIER . _CLASS _CLASSNAME @1 class_statements

    _CLASS  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    2 program: class_list .
    4 class_list: class_list . class

    _ACCESS_SPECIFIER  shift, and go to state 1

    $default  reduce using rule 2 (program)

    class  go to state 7


State 4

    3 class_list: class .

    $default  reduce using rule 3 (class_list)


State 5

    6 class: _ACCESS_SPECIFIER _CLASS . _CLASSNAME @1 class_statements

    _CLASSNAME  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    4 class_list: class_list class .

    $default  reduce using rule 4 (class_list)


State 8

    6 class: _ACCESS_SPECIFIER _CLASS _CLASSNAME . @1 class_statements

    $default  reduce using rule 5 (@1)

    @1  go to state 9


State 9

    6 class: _ACCESS_SPECIFIER _CLASS _CLASSNAME @1 . class_statements

    _LBRACKET  shift, and go to state 10

    class_statements  go to state 11


State 10

    7 class_statements: _LBRACKET . class_variable_list constructor_list function_list _RBRACKET

    $default  reduce using rule 8 (class_variable_list)

    class_variable_list  go to state 12


State 11

    6 class: _ACCESS_SPECIFIER _CLASS _CLASSNAME @1 class_statements .

    $default  reduce using rule 6 (class)


State 12

    7 class_statements: _LBRACKET class_variable_list . constructor_list function_list _RBRACKET
    9 class_variable_list: class_variable_list . class_variable

    _TYPE  shift, and go to state 13

    $default  reduce using rule 10 (constructor_list)

    constructor_list  go to state 14
    class_variable    go to state 15


State 13

   66 class_variable: _TYPE . $@9 class_line_vars _SEMICOLON

    $default  reduce using rule 65 ($@9)

    $@9  go to state 16


State 14

    7 class_statements: _LBRACKET class_variable_list constructor_list . function_list _RBRACKET
   11 constructor_list: constructor_list . constructor

    _CLASSNAME  shift, and go to state 17

    $default  reduce using rule 22 (function_list)

    constructor    go to state 18
    function_list  go to state 19


State 15

    9 class_variable_list: class_variable_list class_variable .

    $default  reduce using rule 9 (class_variable_list)


State 16

   66 class_variable: _TYPE $@9 . class_line_vars _SEMICOLON

    _ID  shift, and go to state 20

    class_line_vars  go to state 21


State 17

   12 constructor: _CLASSNAME . _LPAREN _constr_param_list _RPAREN _LBRACKET _constructor_body _RBRACKET

    _LPAREN  shift, and go to state 22


State 18

   11 constructor_list: constructor_list constructor .

    $default  reduce using rule 11 (constructor_list)


State 19

    7 class_statements: _LBRACKET class_variable_list constructor_list function_list . _RBRACKET
   23 function_list: function_list . function

    _ACCESS_SPECIFIER  shift, and go to state 23
    _RBRACKET          shift, and go to state 24

    function  go to state 25


State 20

   67 class_line_vars: _ID .

    $default  reduce using rule 67 (class_line_vars)


State 21

   66 class_variable: _TYPE $@9 class_line_vars . _SEMICOLON
   68 class_line_vars: class_line_vars . _COMMA _ID

    _SEMICOLON  shift, and go to state 26
    _COMMA      shift, and go to state 27


State 22

   12 constructor: _CLASSNAME _LPAREN . _constr_param_list _RPAREN _LBRACKET _constructor_body _RBRACKET

    _TYPE  shift, and go to state 28

    $default  reduce using rule 13 (_constr_param_list)

    _constr_param_list   go to state 29
    _constr_with_params  go to state 30
    _constr_param        go to state 31


State 23

   25 function: _ACCESS_SPECIFIER . static _TYPE _ID $@3 _LPAREN parameter _RPAREN func_body

    _STATIC  shift, and go to state 32

    $default  reduce using rule 26 (static)

    static  go to state 33


State 24

    7 class_statements: _LBRACKET class_variable_list constructor_list function_list _RBRACKET .

    $default  reduce using rule 7 (class_statements)


State 25

   23 function_list: function_list function .

    $default  reduce using rule 23 (function_list)


State 26

   66 class_variable: _TYPE $@9 class_line_vars _SEMICOLON .

    $default  reduce using rule 66 (class_variable)


State 27

   68 class_line_vars: class_line_vars _COMMA . _ID

    _ID  shift, and go to state 34


State 28

   17 _constr_param: _TYPE . _ID

    _ID  shift, and go to state 35


State 29

   12 constructor: _CLASSNAME _LPAREN _constr_param_list . _RPAREN _LBRACKET _constructor_body _RBRACKET

    _RPAREN  shift, and go to state 36


State 30

   14 _constr_param_list: _constr_with_params .
   16 _constr_with_params: _constr_with_params . _COMMA _constr_param

    _COMMA  shift, and go to state 37

    $default  reduce using rule 14 (_constr_param_list)


State 31

   15 _constr_with_params: _constr_param .

    $default  reduce using rule 15 (_constr_with_params)


State 32

   27 static: _STATIC .

    $default  reduce using rule 27 (static)


State 33

   25 function: _ACCESS_SPECIFIER static . _TYPE _ID $@3 _LPAREN parameter _RPAREN func_body

    _TYPE  shift, and go to state 38


State 34

   68 class_line_vars: class_line_vars _COMMA _ID .

    $default  reduce using rule 68 (class_line_vars)


State 35

   17 _constr_param: _TYPE _ID .

    $default  reduce using rule 17 (_constr_param)


State 36

   12 constructor: _CLASSNAME _LPAREN _constr_param_list _RPAREN . _LBRACKET _constructor_body _RBRACKET

    _LBRACKET  shift, and go to state 39


State 37

   16 _constr_with_params: _constr_with_params _COMMA . _constr_param

    _TYPE  shift, and go to state 28

    _constr_param  go to state 40


State 38

   25 function: _ACCESS_SPECIFIER static _TYPE . _ID $@3 _LPAREN parameter _RPAREN func_body

    _ID  shift, and go to state 41


State 39

   12 constructor: _CLASSNAME _LPAREN _constr_param_list _RPAREN _LBRACKET . _constructor_body _RBRACKET

    $default  reduce using rule 18 (_constructor_body)

    _constructor_body  go to state 42


State 40

   16 _constr_with_params: _constr_with_params _COMMA _constr_param .

    $default  reduce using rule 16 (_constr_with_params)


State 41

   25 function: _ACCESS_SPECIFIER static _TYPE _ID . $@3 _LPAREN parameter _RPAREN func_body

    $default  reduce using rule 24 ($@3)

    $@3  go to state 43


State 42

   12 constructor: _CLASSNAME _LPAREN _constr_param_list _RPAREN _LBRACKET _constructor_body . _RBRACKET
   19 _constructor_body: _constructor_body . _constructor_row

    _RBRACKET  shift, and go to state 44
    _THIS      shift, and go to state 45

    _constructor_row  go to state 46


State 43

   25 function: _ACCESS_SPECIFIER static _TYPE _ID $@3 . _LPAREN parameter _RPAREN func_body

    _LPAREN  shift, and go to state 47


State 44

   12 constructor: _CLASSNAME _LPAREN _constr_param_list _RPAREN _LBRACKET _constructor_body _RBRACKET .

    $default  reduce using rule 12 (constructor)


State 45

   21 _constructor_row: _THIS . _DOT _ID _ASSIGN _ID $@2 _SEMICOLON

    _DOT  shift, and go to state 48


State 46

   19 _constructor_body: _constructor_body _constructor_row .

    $default  reduce using rule 19 (_constructor_body)


State 47

   25 function: _ACCESS_SPECIFIER static _TYPE _ID $@3 _LPAREN . parameter _RPAREN func_body

    _TYPE  shift, and go to state 49

    $default  reduce using rule 28 (parameter)

    parameter  go to state 50


State 48

   21 _constructor_row: _THIS _DOT . _ID _ASSIGN _ID $@2 _SEMICOLON

    _ID  shift, and go to state 51


State 49

   29 parameter: _TYPE . _ID

    _ID  shift, and go to state 52


State 50

   25 function: _ACCESS_SPECIFIER static _TYPE _ID $@3 _LPAREN parameter . _RPAREN func_body

    _RPAREN  shift, and go to state 53


State 51

   21 _constructor_row: _THIS _DOT _ID . _ASSIGN _ID $@2 _SEMICOLON

    _ASSIGN  shift, and go to state 54


State 52

   29 parameter: _TYPE _ID .

    $default  reduce using rule 29 (parameter)


State 53

   25 function: _ACCESS_SPECIFIER static _TYPE _ID $@3 _LPAREN parameter _RPAREN . func_body

    _LBRACKET  shift, and go to state 55

    func_body  go to state 56


State 54

   21 _constructor_row: _THIS _DOT _ID _ASSIGN . _ID $@2 _SEMICOLON

    _ID  shift, and go to state 57


State 55

   30 func_body: _LBRACKET . variable_list statement_list _RBRACKET

    $default  reduce using rule 61 (variable_list)

    variable_list  go to state 58


State 56

   25 function: _ACCESS_SPECIFIER static _TYPE _ID $@3 _LPAREN parameter _RPAREN func_body .

    $default  reduce using rule 25 (function)


State 57

   21 _constructor_row: _THIS _DOT _ID _ASSIGN _ID . $@2 _SEMICOLON

    $default  reduce using rule 20 ($@2)

    $@2  go to state 59


State 58

   30 func_body: _LBRACKET variable_list . statement_list _RBRACKET
   62 variable_list: variable_list . variable

    _TYPE  shift, and go to state 60

    $default  reduce using rule 31 (statement_list)

    statement_list  go to state 61
    variable        go to state 62


State 59

   21 _constructor_row: _THIS _DOT _ID _ASSIGN _ID $@2 . _SEMICOLON

    _SEMICOLON  shift, and go to state 63


State 60

   64 variable: _TYPE . $@8 vars _SEMICOLON

    $default  reduce using rule 63 ($@8)

    $@8  go to state 64


State 61

   30 func_body: _LBRACKET variable_list statement_list . _RBRACKET
   32 statement_list: statement_list . statement

    _ID         shift, and go to state 65
    _CLASSNAME  shift, and go to state 66
    _RBRACKET   shift, and go to state 67
    _FOR        shift, and go to state 68

    statement              go to state 69
    make_object_statement  go to state 70
    inc_statement          go to state 71
    assignment_statement   go to state 72
    for_statement          go to state 73


State 62

   62 variable_list: variable_list variable .

    $default  reduce using rule 62 (variable_list)


State 63

   21 _constructor_row: _THIS _DOT _ID _ASSIGN _ID $@2 _SEMICOLON .

    $default  reduce using rule 21 (_constructor_row)


State 64

   64 variable: _TYPE $@8 . vars _SEMICOLON

    _ID  shift, and go to state 74

    vars  go to state 75


State 65

   43 inc_statement: _ID . $@4 _INC _SEMICOLON
   44 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON

    _ASSIGN  shift, and go to state 76

    $default  reduce using rule 42 ($@4)

    $@4  go to state 77


State 66

   37 make_object_statement: _CLASSNAME . _ID _ASSIGN _NEW _CLASSNAME _LPAREN ids _RPAREN _SEMICOLON

    _ID  shift, and go to state 78


State 67

   30 func_body: _LBRACKET variable_list statement_list _RBRACKET .

    $default  reduce using rule 30 (func_body)


State 68

   47 for_statement: _FOR . _LPAREN _TYPE _ID $@5 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN _LBRACKET @6 statement_list _RBRACKET

    _LPAREN  shift, and go to state 79


State 69

   32 statement_list: statement_list statement .

    $default  reduce using rule 32 (statement_list)


State 70

   34 statement: make_object_statement .

    $default  reduce using rule 34 (statement)


State 71

   35 statement: inc_statement .

    $default  reduce using rule 35 (statement)


State 72

   36 statement: assignment_statement .

    $default  reduce using rule 36 (statement)


State 73

   33 statement: for_statement .

    $default  reduce using rule 33 (statement)


State 74

   69 vars: _ID .

    $default  reduce using rule 69 (vars)


State 75

   64 variable: _TYPE $@8 vars . _SEMICOLON
   70 vars: vars . _COMMA _ID

    _SEMICOLON  shift, and go to state 80
    _COMMA      shift, and go to state 81


State 76

   44 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 82
    _INT_NUMBER   shift, and go to state 83
    _UINT_NUMBER  shift, and go to state 84
    _LPAREN       shift, and go to state 85

    exp            go to state 86
    literal        go to state 87
    function_call  go to state 88
    num_exp        go to state 89


State 77

   43 inc_statement: _ID $@4 . _INC _SEMICOLON

    _INC  shift, and go to state 90


State 78

   37 make_object_statement: _CLASSNAME _ID . _ASSIGN _NEW _CLASSNAME _LPAREN ids _RPAREN _SEMICOLON

    _ASSIGN  shift, and go to state 91


State 79

   47 for_statement: _FOR _LPAREN . _TYPE _ID $@5 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN _LBRACKET @6 statement_list _RBRACKET

    _TYPE  shift, and go to state 92


State 80

   64 variable: _TYPE $@8 vars _SEMICOLON .

    $default  reduce using rule 64 (variable)


State 81

   70 vars: vars _COMMA . _ID

    _ID  shift, and go to state 93


State 82

   50 exp: _ID .
   56 function_call: _ID . $@7 _LPAREN argument _RPAREN

    _LPAREN   reduce using rule 55 ($@7)
    $default  reduce using rule 50 (exp)

    $@7  go to state 94


State 83

   53 literal: _INT_NUMBER .

    $default  reduce using rule 53 (literal)


State 84

   54 literal: _UINT_NUMBER .

    $default  reduce using rule 54 (literal)


State 85

   52 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 82
    _INT_NUMBER   shift, and go to state 83
    _UINT_NUMBER  shift, and go to state 84
    _LPAREN       shift, and go to state 85

    exp            go to state 86
    literal        go to state 87
    function_call  go to state 88
    num_exp        go to state 95


State 86

   59 num_exp: exp .

    $default  reduce using rule 59 (num_exp)


State 87

   49 exp: literal .

    $default  reduce using rule 49 (exp)


State 88

   51 exp: function_call .

    $default  reduce using rule 51 (exp)


State 89

   44 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   60 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 96
    _AROP       shift, and go to state 97


State 90

   43 inc_statement: _ID $@4 _INC . _SEMICOLON

    _SEMICOLON  shift, and go to state 98


State 91

   37 make_object_statement: _CLASSNAME _ID _ASSIGN . _NEW _CLASSNAME _LPAREN ids _RPAREN _SEMICOLON

    _NEW  shift, and go to state 99


State 92

   47 for_statement: _FOR _LPAREN _TYPE . _ID $@5 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN _LBRACKET @6 statement_list _RBRACKET

    _ID  shift, and go to state 100


State 93

   70 vars: vars _COMMA _ID .

    $default  reduce using rule 70 (vars)


State 94

   56 function_call: _ID $@7 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 101


State 95

   52 exp: _LPAREN num_exp . _RPAREN
   60 num_exp: num_exp . _AROP exp

    _RPAREN  shift, and go to state 102
    _AROP    shift, and go to state 97


State 96

   44 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 44 (assignment_statement)


State 97

   60 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 82
    _INT_NUMBER   shift, and go to state 83
    _UINT_NUMBER  shift, and go to state 84
    _LPAREN       shift, and go to state 85

    exp            go to state 103
    literal        go to state 87
    function_call  go to state 88


State 98

   43 inc_statement: _ID $@4 _INC _SEMICOLON .

    $default  reduce using rule 43 (inc_statement)


State 99

   37 make_object_statement: _CLASSNAME _ID _ASSIGN _NEW . _CLASSNAME _LPAREN ids _RPAREN _SEMICOLON

    _CLASSNAME  shift, and go to state 104


State 100

   47 for_statement: _FOR _LPAREN _TYPE _ID . $@5 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN _LBRACKET @6 statement_list _RBRACKET

    $default  reduce using rule 45 ($@5)

    $@5  go to state 105


State 101

   56 function_call: _ID $@7 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 82
    _INT_NUMBER   shift, and go to state 83
    _UINT_NUMBER  shift, and go to state 84
    _LPAREN       shift, and go to state 85

    $default  reduce using rule 57 (argument)

    exp            go to state 86
    literal        go to state 87
    function_call  go to state 88
    argument       go to state 106
    num_exp        go to state 107


State 102

   52 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 52 (exp)


State 103

   60 num_exp: num_exp _AROP exp .

    $default  reduce using rule 60 (num_exp)


State 104

   37 make_object_statement: _CLASSNAME _ID _ASSIGN _NEW _CLASSNAME . _LPAREN ids _RPAREN _SEMICOLON

    _LPAREN  shift, and go to state 108


State 105

   47 for_statement: _FOR _LPAREN _TYPE _ID $@5 . _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN _LBRACKET @6 statement_list _RBRACKET

    _ASSIGN  shift, and go to state 109


State 106

   56 function_call: _ID $@7 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 110


State 107

   58 argument: num_exp .
   60 num_exp: num_exp . _AROP exp

    _AROP  shift, and go to state 97

    $default  reduce using rule 58 (argument)


State 108

   37 make_object_statement: _CLASSNAME _ID _ASSIGN _NEW _CLASSNAME _LPAREN . ids _RPAREN _SEMICOLON

    _ID  shift, and go to state 111

    $default  reduce using rule 38 (ids)

    ids      go to state 112
    id_list  go to state 113


State 109

   47 for_statement: _FOR _LPAREN _TYPE _ID $@5 _ASSIGN . literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN _LBRACKET @6 statement_list _RBRACKET

    _INT_NUMBER   shift, and go to state 83
    _UINT_NUMBER  shift, and go to state 84

    literal  go to state 114


State 110

   56 function_call: _ID $@7 _LPAREN argument _RPAREN .

    $default  reduce using rule 56 (function_call)


State 111

   40 id_list: _ID .

    $default  reduce using rule 40 (id_list)


State 112

   37 make_object_statement: _CLASSNAME _ID _ASSIGN _NEW _CLASSNAME _LPAREN ids . _RPAREN _SEMICOLON

    _RPAREN  shift, and go to state 115


State 113

   39 ids: id_list .
   41 id_list: id_list . _COMMA _ID

    _COMMA  shift, and go to state 116

    $default  reduce using rule 39 (ids)


State 114

   47 for_statement: _FOR _LPAREN _TYPE _ID $@5 _ASSIGN literal . _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN _LBRACKET @6 statement_list _RBRACKET

    _SEMICOLON  shift, and go to state 117


State 115

   37 make_object_statement: _CLASSNAME _ID _ASSIGN _NEW _CLASSNAME _LPAREN ids _RPAREN . _SEMICOLON

    _SEMICOLON  shift, and go to state 118


State 116

   41 id_list: id_list _COMMA . _ID

    _ID  shift, and go to state 119


State 117

   47 for_statement: _FOR _LPAREN _TYPE _ID $@5 _ASSIGN literal _SEMICOLON . rel_exp _SEMICOLON _ID _INC _RPAREN _LBRACKET @6 statement_list _RBRACKET

    _ID           shift, and go to state 82
    _INT_NUMBER   shift, and go to state 83
    _UINT_NUMBER  shift, and go to state 84
    _LPAREN       shift, and go to state 85

    rel_exp        go to state 120
    exp            go to state 86
    literal        go to state 87
    function_call  go to state 88
    num_exp        go to state 121


State 118

   37 make_object_statement: _CLASSNAME _ID _ASSIGN _NEW _CLASSNAME _LPAREN ids _RPAREN _SEMICOLON .

    $default  reduce using rule 37 (make_object_statement)


State 119

   41 id_list: id_list _COMMA _ID .

    $default  reduce using rule 41 (id_list)


State 120

   47 for_statement: _FOR _LPAREN _TYPE _ID $@5 _ASSIGN literal _SEMICOLON rel_exp . _SEMICOLON _ID _INC _RPAREN _LBRACKET @6 statement_list _RBRACKET

    _SEMICOLON  shift, and go to state 122


State 121

   48 rel_exp: num_exp . _RELOP num_exp
   60 num_exp: num_exp . _AROP exp

    _AROP   shift, and go to state 97
    _RELOP  shift, and go to state 123


State 122

   47 for_statement: _FOR _LPAREN _TYPE _ID $@5 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON . _ID _INC _RPAREN _LBRACKET @6 statement_list _RBRACKET

    _ID  shift, and go to state 124


State 123

   48 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 82
    _INT_NUMBER   shift, and go to state 83
    _UINT_NUMBER  shift, and go to state 84
    _LPAREN       shift, and go to state 85

    exp            go to state 86
    literal        go to state 87
    function_call  go to state 88
    num_exp        go to state 125


State 124

   47 for_statement: _FOR _LPAREN _TYPE _ID $@5 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID . _INC _RPAREN _LBRACKET @6 statement_list _RBRACKET

    _INC  shift, and go to state 126


State 125

   48 rel_exp: num_exp _RELOP num_exp .
   60 num_exp: num_exp . _AROP exp

    _AROP  shift, and go to state 97

    $default  reduce using rule 48 (rel_exp)


State 126

   47 for_statement: _FOR _LPAREN _TYPE _ID $@5 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC . _RPAREN _LBRACKET @6 statement_list _RBRACKET

    _RPAREN  shift, and go to state 127


State 127

   47 for_statement: _FOR _LPAREN _TYPE _ID $@5 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN . _LBRACKET @6 statement_list _RBRACKET

    _LBRACKET  shift, and go to state 128


State 128

   47 for_statement: _FOR _LPAREN _TYPE _ID $@5 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN _LBRACKET . @6 statement_list _RBRACKET

    $default  reduce using rule 46 (@6)

    @6  go to state 129


State 129

   47 for_statement: _FOR _LPAREN _TYPE _ID $@5 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN _LBRACKET @6 . statement_list _RBRACKET

    $default  reduce using rule 31 (statement_list)

    statement_list  go to state 130


State 130

   32 statement_list: statement_list . statement
   47 for_statement: _FOR _LPAREN _TYPE _ID $@5 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN _LBRACKET @6 statement_list . _RBRACKET

    _ID         shift, and go to state 65
    _CLASSNAME  shift, and go to state 66
    _RBRACKET   shift, and go to state 131
    _FOR        shift, and go to state 68

    statement              go to state 69
    make_object_statement  go to state 70
    inc_statement          go to state 71
    assignment_statement   go to state 72
    for_statement          go to state 73


State 131

   47 for_statement: _FOR _LPAREN _TYPE _ID $@5 _ASSIGN literal _SEMICOLON rel_exp _SEMICOLON _ID _INC _RPAREN _LBRACKET @6 statement_list _RBRACKET .

    $default  reduce using rule 47 (for_statement)
